# elevate

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  conftest.py  pyproject.toml
.github/: copilot-instructions.md
agent/: cli.py  cli_agent.py  marketing_agent.py  transcript.txt
src/common/: __init__.py
src/elevate/: __init__.py  only_audiocast.py  only_demo_script.py  only_eli5.py  only_email.py  only_email_prompts.py  only_json.py  only_judge_llms.py  only_markdown.py  only_python.py  only_python_prompt.py  only_qa.py  only_rephrase.py  only_rephrase_prompt.py  only_shell.py  only_slides.py  only_summary.py  only_video_to_blog.py
src/elevate/only_audiocast/: __init__.py  agent_instructions.j2  instructions.j2
src/elevate/only_demo_script/: __init__.py  instructions.j2
src/elevate/only_eli5/: __init__.py  instructions.j2
src/elevate/only_email/: __init__.py  instructions.j2
src/elevate/only_json/: __init__.py  instructions.j2
src/elevate/only_judge_llms/: __init__.py  instructions.j2
src/elevate/only_markdown/: __init__.py  instructions.j2
src/elevate/only_python/: __init__.py  instructions.j2
src/elevate/only_qa/: __init__.py  instructions.j2
src/elevate/only_rephrase/: __init__.py  instructions.j2
src/elevate/only_shell/: __init__.py  instructions.j2
src/elevate/only_slides/: __init__.py  instructions.j2
src/elevate/only_summary/: __init__.py  instructions.j2
src/elevate/only_video_to_blog/: __init__.py  instructions.j2
src/elevate/only_video_transcript/: __init__.py  instructions.j2
src/elevate/only_video_transcript_to_blog/: __init__.py  instructions.j2
suite/: __init__.py  run_tests.py  summarize_reports.py
suite/reports/: report_gpt-4.1.json  report_gpt-4o-mini.json
suite/reports/anthropic/claude-sonnet-4-20250514/: only_audiocast.json  only_eli5.json  only_email.json  only_json.json  only_judge_llms.json  only_markdown.json  only_python.json  only_qa.json  only_rephrase.json  only_shell.json  only_slides.json  only_summary.json  only_video.json
suite/reports/openai/o4-mini/: only_audiocast.json  only_eli5.json  only_email.json  only_json.json  only_judge_llms.json  only_markdown.json  only_python.json  only_qa.json  only_rephrase.json  only_shell.json  only_slides.json  only_summary.json  only_video.json
suite/reports/report_gemini/: gemini-2.0-flash.json
suite/reports/report_groq/: llama-3.3-70b-versatile.json
tests/: __init__.py  conftest.py  test_elevate.py  test_only_audiocast.py  test_only_eli5.py  test_only_email.py  test_only_json.py  test_only_judge_llms.py  test_only_markdown.py  test_only_python.py  test_only_qa.py  test_only_rephrase.py  test_only_shell.py  test_only_slides.py  test_only_summary.py  test_only_video.py  test_only_video_transcript.py  test_only_video_transcript_to_blog.py
