[project]
name = "elevate"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "e2b-code-interpreter>=1.2.0",
    "fire>=0.7.0",
    "litellm>=1.63.12",
    "openai>=1.67.0",
    "prompt-toolkit>=3.0.51",
    "pydantic>=2.10.6",
    "pydub>=0.25.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.5",
]
